# stx-board

./: Cargo.toml
src/: main.rs
src/templates/: all_tasks.hbs  index.hbs
styles/: _global.scss  _reset.scss  _variables.scss  index.scss
tests/: tasks.json
