[package]
name = "stx-board"
version = "0.1.0"
authors = ["Erich Cordoba <erich.cordoba.malibran@intel.com>"]

[dependencies]
actix-web = "0.7.13"
reqwest = "0.9.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
storyboard-client = { git = "https://github.com/ericho/storyboard-client" }
futures = "0.1.25"